Fixed a lot of trivial style problems detected by sonar